Set up reCAPTCHA to prevent spam
Any contact form on a website will get spam if it's left completely
open. This implements Google's reCAPTCHA v3, that should be invisible to
most users, to prevent spam from bots.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,8 @@ p > a {
 }
 
 .required-asterisks {
-  label:has(+ input[required])::after {
+  label:has(+ input[required])::after,
+  label:has(+ textarea[required])::after {
     content: " *";
     color: red;
   }
